# ADI-Stack-zkOS

./: .gitignore  .gitmodules  Cargo.toml  README.md  deny.toml  input.hex  perf.sh  rust-toolchain.toml  rustc-ice-2025-09-04T13_45_19-63818.txt  rustc-ice-2025-09-04T13_45_38-63849.txt  rustc-ice-2025-09-04T13_45_57-63906.txt  rustc-ice-2025-09-04T13_46_04-63940.txt  rustc-ice-2025-09-04T13_46_25-63973.txt  tools.sh
.cargo/: config.toml
api/: Cargo.toml
api/src/: helpers.rs  lib.rs
basic_bootloader/: Cargo.toml
basic_bootloader/src/: lib.rs
basic_bootloader/src/bootloader/: block_header.rs  config.rs  constants.rs  errors.rs  gas_helpers.rs  mod.rs  paymaster_helper.rs  process_l1_transaction.rs  process_transaction.rs  result_keeper.rs  rlp.rs  run_single_interaction.rs  runner.rs  stf.rs  supported_ees.rs  transaction_flow.rs
basic_bootloader/src/bootloader/account_models/: abstract_account.rs  contract.rs  eoa.rs  mod.rs
basic_bootloader/src/bootloader/block_flow/: block_data_keeper.rs  chain_check.rs  generic_tx_loop.rs  metadata_init_op.rs  mod.rs  post_system_init_op.rs  post_tx_loop_op.rs  pre_tx_loop_op.rs  tx_loop.rs
basic_bootloader/src/bootloader/ethereum_eoa_flow/: mod.rs  validation_impl.rs
basic_bootloader/src/bootloader/execution_steps/: execute.rs  mod.rs  perform_deployment.rs  process_fee_payments.rs  validate.rs
basic_bootloader/src/bootloader/transaction/: abi_utils.rs  access_list_parser.rs  authorization_list.rs  authorization_list_parser.rs  mod.rs  reserved_dynamic_parser.rs  tests.rs
basic_bootloader/src/bootloader/transaction_flow/: mod.rs  process_single.rs
basic_system/: Cargo.toml
basic_system/src/: cost_constants.rs  lib.rs
basic_system/src/system_functions/: bn254_ecadd.rs  bn254_ecmul.rs  bn254_pairing_check.rs  ecrecover.rs  keccak256.rs  mod.rs  modexp.rs  p256_verify.rs  point_evaluation.rs  ripemd160.rs  sha256.rs
basic_system/src/system_functions/modexp/: mod.rs
basic_system/src/system_implementation/: mod.rs
basic_system/src/system_implementation/cache_structs/: mod.rs  storage_values.rs
basic_system/src/system_implementation/ethereum_storage_model/: mod.rs  persist_changes.rs  storage_model.rs
basic_system/src/system_implementation/flat_storage_model/: account_cache.rs  account_cache_entry.rs  cost_constants.rs  mod.rs  preimage_cache.rs  simple_growable_storage.rs  storage_cache.rs
basic_system/src/system_implementation/memory/: basic_memory.rs
basic_system/src/system_implementation/system/: basic_storage_model.rs  io_subsystem.rs  mod.rs  public_input.rs  storage_model_subtyped_io.rs  system_post_work.rs
callable_oracles/: Cargo.toml
callable_oracles/src/: lib.rs
callable_oracles/src/arithmetic/: mod.rs
callable_oracles/src/field_hints/: impls.rs  mod.rs
callable_oracles/src/hash_to_prime/: common.rs  compute.rs  evaluate.rs  mod.rs  verify.rs
callable_oracles/src/utils/: evaluate.rs  mod.rs  usize_slice_iterator.rs
circuit_test_program/: Cargo.toml
circuit_test_program/src/: main.rs
crypto/src/blake2s/test_program/: Cargo.toml
evm_interpreter/: Cargo.toml
evm_interpreter/src/: ee_trait_impl.rs  errors.rs  evm_stack.rs  gas.rs  gas_constants.rs  i256.rs  interpreter.rs  lib.rs  native_resource_constants.rs  u256.rs  utils.rs
evm_interpreter/src/instructions/: arithmetic.rs  bitwise.rs  control_flow.rs  environment.rs  heap.rs  host.rs  mod.rs  stack.rs  system.rs
forward_system/: Cargo.toml
forward_system/src/: lib.rs
forward_system/src/run/: convert.rs  debug_oracle.rs  interface_impl.rs  mod.rs  oracle.rs  output.rs  preimage_source.rs  result_keeper.rs  tracing_impl.rs  tree.rs  tx_result_callback.rs  tx_source.rs
forward_system/src/system/: bootloader.rs  mod.rs  system.rs
interface/: Cargo.toml
interface/src/: bytes32.rs  common_types.rs  constants.rs  leaf_proof.rs  lib.rs  rlp.rs  traits.rs  types.rs
oracle_provider/: Cargo.toml
oracle_provider/src/: lib.rs
storage_models/: Cargo.toml
storage_models/src/: lib.rs
storage_models/src/common_structs/: generic_transient_storage.rs
system_hooks/: Cargo.toml
system_hooks/src/: addresses_constants.rs  contract_deployer.rs  l1_messenger.rs  l2_base_token.rs  lib.rs  mock_precompiles.rs  precompiles.rs
system_hooks/src/eip_152/: impls.rs  mod.rs
system_hooks/src/eip_2537/: addition.rs  mappings.rs  mod.rs  msm.rs  pairing.rs
tests/instances/eth_runner/: Cargo.toml
tests/instances/forge_tests/: Cargo.toml  markers.bench
tests/instances/header/: Cargo.toml
tests/instances/interop/: Cargo.toml
zk_ee/: Cargo.toml
zk_ee/src/: execution_environment_type.rs  lib.rs
zk_ee/src/basic_queries/: mod.rs
zk_ee/src/common_structs/: cache_record.rs  callee_parameters.rs  events_storage.rs  generic_ethereum_like_fsm_state.rs  history_counter.rs  history_list.rs  interop_root.rs  logs_storage.rs  mod.rs  new_preimages_publication_storage.rs  proof_data.rs  pubdata_compression.rs  state_root_view.rs  structured_account_cache_record.rs  structured_cache.rs  structured_storage_cache_record.rs  warm_storage_key.rs  warm_storage_value.rs
zk_ee/src/common_traits/: mod.rs  usize_serializable_dynamic.rs
zk_ee/src/kv_markers/: kv_impls.rs  mod.rs
zk_ee/src/memory/: mod.rs  slice_vec.rs  stack_trait.rs
zk_ee/src/metadata_markers/: basic_metadata.rs  block_hashes_cache.rs  metadata.rs  mod.rs  system_metadata.rs
zk_ee/src/oracle/: basic_queries.rs  mod.rs  query_ids.rs  simple_oracle_query.rs  usize_rw.rs
zk_ee/src/reference_implementations/: mod.rs
zk_ee/src/storage_types/: mod.rs
zk_ee/src/system/: base_system_functions.rs  constants.rs  errors.rs  io.rs  metadata.rs  mod.rs  resources.rs  result_keeper.rs  tracer.rs
zk_ee/src/system_io_oracle/: dyn_usize_iterator.rs  mod.rs
zk_ee/src/types_config/: mod.rs
zk_ee/src/utils/: aligned_buffer.rs  aligned_vector.rs  bytes32.rs  exact_size_chain.rs  integer_utils.rs  mod.rs  stack_linked_list.rs  transaction_nature.rs  usize_rw.rs
zk_ee/tests/: playground.rs
zksync_os_runner/: Cargo.toml
zksync_os_runner/src/: lib.rs  run_transpiler.rs
(+471 files in other folders)
