[package]
name = "zksync_os_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

forward_system = { path = "../forward_system"}
oracle_provider = { path = "../oracle_provider" }
callable_oracles = { path = "../callable_oracles/" }
zksync_os_runner = { path = "../zksync_os_runner"}
zk_ee = { path = "../zk_ee" }
crypto = { path = "../crypto" }
basic_system = { path = "../basic_system" }
evm_interpreter = { path = "../evm_interpreter" }
ruint = { version = "1.16", default-features = false }
zksync_types = { git = "https://github.com/matter-labs/zksync-era", rev = "core-v28.7.0" }
ethers = "2.0.0" # ethers 2.0.0 is required due to dependency conflict TODO: replace with alloy
alloy = { version = "=1", features = ["full", "eip712", "consensus"]}



