[package]
name = "zksync_os_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

forward_system = { path = "../forward_system"}
oracle_provider = { path = "../oracle_provider" }
callable_oracles = { path = "../callable_oracles/" }
zksync_os_runner = { path = "../zksync_os_runner"}
zk_ee = { path = "../zk_ee" }
crypto = { path = "../crypto" }
basic_system = { path = "../basic_system" }
evm_interpreter = { path = "../evm_interpreter" }
ruint = { version = "1.16", default-features = false }
alloy = { version = "=1", features = ["eip712", "consensus", "rpc-types", "signer-local", "dyn-abi", "network"]}
