[package]
name = "zksync_os_api"
description = "ZKsync OS API helpers"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

forward_system = { workspace = true }
oracle_provider = { workspace = true }
callable_oracles = { workspace = true }
zksync_os_runner = { workspace = true }
zk_ee = { workspace = true }
crypto = { workspace = true }
basic_system = { workspace = true }
evm_interpreter = { workspace = true }

risc_v_simulator = { workspace = true }
ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
alloy = { version = "1", default-features = false, features = ["eip712", "consensus", "rpc-types", "signer-local", "dyn-abi", "network"] }

[features]
# By default, use the risc_v_simulator with delegation (which is faster).
default = ["risc_v_simulator/delegation"]
