[package]
name = "basic_bootloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
cycle_marker = { path = "../cycle_marker" }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
system_hooks = { path = "../system_hooks", default-features = false }
basic_system = { path = "../basic_system", default-features = false }
crypto = { path = "../crypto", default-features = false }
ruint = { workspace = true, default-features = false }
arrayvec = { workspace = true, default-features = false }
strum_macros = "0.27"
paste = "1"
const-hex = { version = "1", default-features = false }

hex = { version = "*", optional = true }

[features]
testing = ["zk_ee/testing", "evm_interpreter/testing", "basic_system/testing", "debug_tools"]
default = ["testing"]
code_in_kernel_space = []
transfers_to_kernel_space = []
charge_priority_fee = []
evm-compatibility = ["code_in_kernel_space", "transfers_to_kernel_space", "charge_priority_fee", "evm_refunds", "basic_system/evm-compatibility", "unlimited_native", "prevrandao"]
cycle_marker = ["system_hooks/cycle_marker", "cycle_marker/log_to_file"]
resources_for_tester = []
unlimited_native = []
disable_system_contracts = []
error_origins = ["zk_ee/error_origins"]
evm_refunds = ["basic_system/evm_refunds"]
wrap-in-batch = ["basic_system/wrap-in-batch"]
pectra = ["eip_7623"]
eip_7623 = []
prevrandao = ["basic_system/prevrandao"]
debug_tools = ["hex"]
