[package]
name = "basic_system"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
evm_interpreter = { path = "../evm_interpreter"  }
ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
crypto = { path = "../crypto", default-features = false, features = ["secp256k1-static-context"]}
arrayvec = { version = "0.7.4", default-features = false }
either = { version = "*", default-features = false }
storage_models = { path = "../storage_models", default-features = false }
cycle_marker = { path = "../cycle_marker" }

hex = {version = "*", optional = true}
rand = {version = "0.9.0", optional = true}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
strum_macros = "0.27.1"
paste = "1.0.15"


[features]
testing = ["zk_ee/testing", "evm_interpreter/testing", "hex", "serde", "ruint/serde", "rand"]
evm-compatibility = []
default = ["testing"]
cycle_marker = ["cycle_marker/log_to_file"]
wrap-in-batch = []

[dev-dependencies]
hex = {version = "0.4.3"}
proptest = "1.6.0"
