[package]
name = "zksync_os_callable_oracles"
description = "ZKsync OS callable oracles"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { workspace = true, default-features = false }
crypto = { workspace = true, default-features = false }
oracle_provider = { workspace = true }

ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }

risc_v_simulator = { workspace = true, optional = true }
num-bigint = { version = "*", optional = true }
num-traits = { version = "*", optional = true }

[dev-dependencies]
hex = "*"

[features]
default = ["evaluate"]
evaluate = ["risc_v_simulator", "num-bigint", "num-traits"]
