[package]
name = "forward_system"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# temporary for witgen
zksync_os_runner = {path = "../zksync_os_runner"}
oracle_provider = { path = "../oracle_provider" }
zk_ee = { path = "../zk_ee", default-features = false }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
basic_system = { path = "../basic_system", default-features = false }
basic_bootloader = { path = "../basic_bootloader", default-features = false }
system_hooks = { path = "../system_hooks", default-features = false }
callable_oracles = { path = "../callable_oracles", default-features = false }
crypto = { path = "../crypto", default-features = false }

zksync_os_interface = { workspace = true, default-features = false }

ruint = { workspace = true, default-features = false }
arrayvec = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }

alloy = { version = "1", features = ["full", "eip712", "consensus"] }
hex = { version = "*", optional = true }
bincode = "1.3"
strum_macros = "0.27.1"
paste = "1.0.15"

[features]
testing = ["zk_ee/testing", "evm_interpreter/testing", "basic_system/testing", "basic_bootloader/testing", "hex"]
default = ["testing", "evm-compatibility", "evm_refunds"]
error_origins = ["zk_ee/error_origins"]
no_print = []
unlimited_native = ["basic_bootloader/unlimited_native"]
evm-compatibility = ["basic_bootloader/evm-compatibility", "basic_system/evm-compatibility", "evm_refunds"]
disable_system_contracts = ["basic_bootloader/disable_system_contracts"]
prevrandao = ["zk_ee/prevrandao"]
evm_refunds = ["basic_system/evm_refunds", "basic_bootloader/evm_refunds", "evm_interpreter/evm_refunds"]
pectra = ["basic_bootloader/pectra"]
