[package]
name = "zksync_os_forward_system"
description = "ZKsync OS forward system"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# temporary for witgen
zksync_os_runner = { workspace = true }
oracle_provider = { workspace = true }
callable_oracles = { workspace = true }
zk_ee = { workspace = true, default-features = false }
evm_interpreter = { workspace = true, default-features = false }
basic_system = { workspace = true, default-features = false }
basic_bootloader = { workspace = true, default-features = false }

zksync_os_interface = { workspace = true }

ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
alloy = { version = "1", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }
hex = { version = "*", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = "1.3"
strum_macros = "0.27.1"
paste = "1.0.15"

[features]
testing = ["zk_ee/testing", "evm_interpreter/testing", "basic_system/testing", "basic_bootloader/testing", "hex"]
default = ["testing"]
error_origins = ["zk_ee/error_origins"]
no_print = []
unlimited_native = ["basic_bootloader/unlimited_native"]
evm-compatibility = ["basic_bootloader/evm-compatibility", "basic_system/evm-compatibility"]
disable_system_contracts = ["basic_bootloader/disable_system_contracts"]
prevrandao = ["zk_ee/prevrandao"]
evm_refunds = ["zk_ee/evm_refunds", "basic_system/evm_refunds", "basic_bootloader/evm_refunds", "evm_interpreter/evm_refunds"]
pectra = ["basic_bootloader/pectra"]
