[package]
name = "zksync_os_interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ruint = { version = "1.12.3", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
cfg-if = "*"
arrayvec = { version = "0.7.4", default-features = false }
sha3 = { version = "0.10", default-features = false }
