[package]
name = "zksync_os_interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { version = "1", default-features = false, features = ["serde", "consensus"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
