[package]
name = "zksync_os_oracle_provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { workspace = true, default-features = false }
risc_v_simulator = { workspace = true }
