[package]
name = "zksync_os_storage_models"
description = "ZKsync OS storage models"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { workspace = true, default-features = false }
crypto = { workspace = true, default-features = false }

[features]
testing = ["zk_ee/testing"]
evm_refunds = ["zk_ee/evm_refunds"]
