[package]
name = "zksync_os_system_hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { workspace = true, default-features = false }
evm_interpreter = { workspace = true, default-features = false }
cycle_marker = { workspace = true }

ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }

arrayvec = { version = "0.7.4", default-features = false }
strum_macros = "0.27.1"
paste = "1.0.15"

[features]
mock-unsupported-precompiles = []
p256_precompile = []
cycle_marker = ["cycle_marker/log_to_file"]
