[package]
name = "zk_ee"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
cfg-if = "*"
crypto = { path = "../crypto", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }
bitflags = { version = "2.6.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
cycle_marker = { path = "../cycle_marker" }
strum_macros = "0.27.1"
paste = "1.0.15"


[features]
testing = ["serde", "ruint/serde"]
default = ["testing", "error_origins"]
cycle_marker = ["cycle_marker/log_to_file"]
error_origins = []
detailed_errors = []
prevrandao = []

[dev-dependencies]
