[package]
name = "zk_ee"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto", default-features = false }
cc-traits = { path = "../supporting_crates/cc-traits/", default-features = false, features = ["allocator_api"] }
cycle_marker = { path = "../cycle_marker" }

ruint = { workspace = true, default-features = false  }
arrayvec = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }

cfg-if = "*"
bitflags = { version = "2.6.0", default-features = false }
strum_macros = "0.27.1"
paste = "1.0.15"
serde-big-array = "0.5"

[features]
serde = ["dep:serde", "ruint/serde"]
testing = ["serde"]
default = ["serde", "error_origins"]
cycle_marker = ["cycle_marker/log_to_file"]
# Adds location (file, line number) where an error is raised
error_origins = []
detailed_errors = []
prevrandao = []

[dev-dependencies]
