[package]
name = "eth_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { version = "1", features = ["rlp", "full"] }
alloy-primitives = { version = "1", features = ["arbitrary"] }
alloy-rpc-types-eth = { version = "*", features = ["serde"] }
alloy-rpc-types-debug = { version = "*", default-features = false }
alloy-rlp = { version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rig = { path = "../../rig" }
zk_ee = { path = "../../../zk_ee" }
basic_system = { path = "../../../basic_system" }
forward_system = { path = "../../../forward_system" }
system_hooks = {path = "../../../system_hooks" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "=1.0.89"
ruint = { version = "1.16", default-features = false }
hex = "*"
ureq = { version = "2", features = ["json"] }
sled = {version = "0.34" }
bincode = { version = "2", features = ["serde"] }
serde_with = "3.13.0"
csv = "1.3"

[features]
simulate_witness_gen = ["rig/simulate_witness_gen"]
default = []
# default = ["evm_replay"]
# default = ["evm_replay", "pectra"]
risc_v_logs = []
evm_replay = ["rig/prevrandao", "rig/unlimited_native", "rig/disable_system_contracts", "rig/evm_refunds", "rig/evm-compatibility"]
pectra = ["rig/pectra"]