[package]
name = "eth_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { version = "1", features = ["full"]}
alloy-rpc-types-eth = { version = "*", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rig = { path = "../../rig" }
zk_ee = { workspace = true }
basic_system = { workspace = true }
system_hooks = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
anyhow = "=1.0.89"
ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
hex = "*"
ureq = { version = "2", features = ["json"] }
sled = {version = "0.34" }
bincode = { version = "2", features = ["serde"] }
serde_with = "3.13.0"
csv = "1.3"

[features]
simulate_witness_gen = ["rig/simulate_witness_gen"]
default = []
evm_replay = ["rig/prevrandao", "rig/unlimited_native", "rig/disable_system_contracts", "rig/evm_refunds"]
