[package]
name = "forge_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
rig = { path = "../../rig" }
zk_ee = { workspace = true }
hex = "*"
