[package]
name = "header"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rig = { path = "../../rig" }
hex = "*"
basic_bootloader = { workspace = true }

[features]
e2e_proving = ["rig/e2e_proving"]
cycle_marker = ["rig/cycle_marker"]
pectra = ["rig/pectra"]
