[package]
name = "interop_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rig = { path = "../../rig" }
zksync_os_runner = { path = "../../../zksync_os_runner"}
risc_v_simulator = { workspace = true, features = ["delegation"] }
hex = "*"
arrayvec = { version = "0.7.4", default-features = false }

[features]
e2e_proving = ["rig/e2e_proving"]
cycle_marker = ["rig/cycle_marker"]
